--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.html]
-indent_size = 2
+[*.scss]
+max_line_length = 80
